--- a/core/templates/core/helpdesk/ticketing_dashboard.html
+++ b/core/templates/core/helpdesk/ticketing_dashboard.html
@@ -3,12 +3,12 @@
 
 {% block title %}🎫 Ticketing Dashboard{% endblock %}
 
-
 {% block extra_css %}
   <link rel="stylesheet" href="{% static 'css/ticketing_dashboard.css' %}">
 {% endblock %}
 
 {% block content %}
+
 <div class="dashboard-wrapper">
 
   <!-- Header -->
@@ -74,7 +74,7 @@
       <div class="card-header">
         <h2><i class="fas fa-bullseye"></i> Distribution Breakdown</h2>
       </div>
-      <div class="distribution-flex">
+      <div class="charts-row">
         <div>
           <h3>By Priority</h3>
           <canvas id="priorityChart" class="tall-chart"></canvas>
