--- a/templates/base.html
+++ b/templates/base.html
@@ -7,35 +7,29 @@
 
   <title>{% block title %}Unified Portal{% endblock %}</title>
 
-  {% block extra_css %}
-  <link rel="stylesheet" href="{% static 'css/ticketing_dashboard.css' %}" />
-  {% endblock %}
-
+  <!-- Vendor CSS -->
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   />
-
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css" />
-</head>
 
+  {% block extra_css %}{% endblock %}
+</head>
 <body>
   {% include "includes/sidebar.html" %}
   {% include "includes/navbar.html" %}
-  
+
   <div class="main-content">
     {% block content %}{% endblock %}
   </div>
 
-{% block extra_js %}
-  
-{% endblock %}
-<script src="{% static 'js/ticketing_dashboard.js' %}"></script>
+  {% block extra_js %}{% endblock %}
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="{% static 'js/ticketing_dashboard.js' %}"></script>
 </body>
 </html>
