--- a/core/templates/core/helpdesk/ticket_by_status.html
+++ b/core/templates/core/helpdesk/ticket_by_status.html
@@ -13,7 +13,7 @@
   <table class="table table-bordered ticket-table">
 
     <thead>
-      <tr>
+      <tr >
         <th>ID</th>
         <th>Title</th>
         <th>Terminal</th>
@@ -24,9 +24,9 @@
 
     <tbody>
       {% for ticket in tickets %}
-      <tr>
+      <tr onclick="window.location='{% url 'ticket_detail' ticket.id %}'" style="cursor:pointer;">
         <td>{{ ticket.id }}</td>
-        <td class="title-cell">{{ ticket.title }}</td>
+        <td class="title-cell"><a href="{% url 'ticket_detail' ticket.id %}">{{ ticket.title }}</td>
         <td>{{ ticket.terminal }}</td>
         <td>{{ ticket.created_at|date:"M d, Y H:i" }}</td>
         <td><span class="status-label status-{{ ticket.status|lower }}">{{ ticket.status|title }}</span></td>
